objects/Technology__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Little</fullName>
                </value>
                <value>
                    <fullName>Some</fullName>
                </value>
                <value>
                    <fullName>Many</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you own more than one brand of technology (Ex. Apple, Samsung, etc.)</description>
        <label>Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_On_Tech__c</fullName>
        <description>How many hours do you spend using technology each day?</description>
        <label>Hours On Tech</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phones__c</fullName>
        <description>How many phones do you have?</description>
        <label>Phones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you spend a lot of time with your technology?</description>
        <label>Time Spent</label>
        <type>Checkbox</type>
    </fields>
    <label>Technology</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Technology Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technologies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>